completed the activities section

--- a/index.html
+++ b/index.html
@@ -14,22 +14,22 @@
             this vibrant nation which is known as "The Giant Of Africa".</p></div>
     </div>
     <div class="mid-container">
-        <h3></h3>
-        <div>
-            <div>
-                <img src="" alt="">
-                <p></p>
-                <p></p>
+        <h3 class="mid-header">Top three activities to do at Nigeria</h3>
+        <div class="activities">
+            <div class="all-activities">
+                <img src="images/nigerian-food.webp" alt="Nigerian food" class="activities-img">
+                <p class="welcome-p">Eat various delicacies</p>
+                <p class="description-p">Indigenous foods are the best you can eat</p>
             </div>
-            <div>
-                <img src="" alt="">
-                <p></p>
-                <p></p>
+            <div class="all-activities">
+                <img src="images/attractions.jpg" alt="Major attractions" class="activities-img">
+                <p class="welcome-p">Visit numerous tourist destinations</p>
+                <p class="description-p">Relax and enjoy the view in attraction areas</p>
             </div>
-            <div>
-                <img src="" alt="">
-                <p></p>
-                <p></p>
+            <div class="all-activities">
+                <img src="images/fashion.jpg" alt="Fashion" class="activities-img">
+                <p class="welcome-p">Experience the Nigerian fashion world</p>
+                <p class="description-p">See the best Nigerian fashion has to offer</p>
             </div>
         </div>
     </div>
