completed the guide section

--- a/index.html
+++ b/index.html
@@ -8,11 +8,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+         <!-------------- Hero Section --------------->
+
     <div class="top-container">
         <div class="first-heading"><h2>Visit Nigeria</h2></div>
         <div class="intro-text"><p>Enjoy culture and food in 
             this vibrant nation which is known as "The Giant Of Africa".</p></div>
     </div>
+        <!-------------- Activities Section --------------->
+
     <div class="mid-container">
         <h3 class="mid-header">Top three activities to do at Nigeria</h3>
         <div class="activities">
@@ -33,15 +37,20 @@
             </div>
         </div>
     </div>
-    <div class="bottom-container">
-        <div>
-            <div><img src="" alt=""></div>
-            <div>
-                <h3></h3>
-                <pre></pre>
-                <p></p>
+        <!-------------- Guide Section --------------->
+
+    <footer class="bottom-container">
+        <div class="guide-card">
+            <img src="images/Vikkyava.jpg" alt="The guide" class="guide-img">
+            <div class="guide-des">
+                <h3>Your guide</h3>
+                <p><i>“I have lived at Nigeria for
+                    over 20 years, so I can
+                    show you all of its best 
+                    parts and hidden secrets.”</i></p>
+                <p>Victor Adewoye</p>
             </div>
         </div>
-    </div>
+    </footer>
 </body>
 </html>
